--- a/css/ergyflash.css
+++ b/css/ergyflash.css
@@ -517,13 +517,14 @@ padding: 5px;
 }
 sup {color :grey;}
 
-li {margin-left: 40px;
+.disc {margin-left: 40px;
     padding-left: 20px;
 display: inline-flexbox;
     list-style:disc;
 }
 
-.num {
+.num {margin-left: 40px;
+display: inline-flexbox;
     list-style : decimal;
     padding-left: 5px;
 }
