--- a/css/ergyflash.css
+++ b/css/ergyflash.css
@@ -252,9 +252,13 @@ color: #000; }
 }
 .flex-mid {
      align-content: center;
+
   
 }
 
+.biig{font-size:  29px;}
+
+semispace{letter-spacing:0.2em; }
 
 
 .banner-left {
